<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_create_family"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/create_family" />
        <item
            android:id="@+id/nav_join_family"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/join_family" />
        <item
            android:id="@+id/nav_view_family"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/view_family" />
    </group>

</menu>
